--- a/Execution Reports/old/Default suite/classes.html
+++ b/Execution Reports/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.Common.LoginTest</td>
+<td>TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyLogin</td>
+<td>verify_create_client</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
