--- a/Execution Reports/old/Default suite/methods-alphabetical.html
+++ b/Execution Reports/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99ad8e">  <td>15/06/26 18:29:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLogin()[pri:0, instance:TestCases.Common.LoginTest@31b7dea0]">VerifyLogin</td> 
-  <td>main@1018547642</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 18:15:03</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC_JOOMLA_BANNERS_CLIENTS_003.setUp()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 18:15:20</td>   <td>17805</td> <td>&nbsp;</td><td title="&lt;&lt;TC_JOOMLA_BANNERS_CLIENTS_003.tearDown()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 18:15:11</td>   <td>8721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_JOOMLA_BANNERS_CLIENTS_003.verify_create_client()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">verify_create_client</td> 
+  <td>main@22223153</td>   <td></td> </tr>
 </table>
