--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99ad8e">  <td>15/07/04 15:41:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_JOOMLA_CONTACTS_001.CreateContacts()[pri:0, instance:TestCases.Contacts.TC_JOOMLA_CONTACTS_001@1150435]">CreateContacts</td> 
-  <td>main@17754059</td>   <td></td> </tr>
-<tr bgcolor="99ad8e">  <td>15/07/04 15:42:15</td>   <td>17531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_JOOMLA_CONTACTS_001.afterMethod()[pri:0, instance:TestCases.Contacts.TC_JOOMLA_CONTACTS_001@1150435]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@17754059</td>   <td></td> </tr>
-<tr bgcolor="99ad8e">  <td>15/07/04 15:41:52</td>   <td>-6078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_JOOMLA_CONTACTS_001.beforeMethod()[pri:0, instance:TestCases.Contacts.TC_JOOMLA_CONTACTS_001@1150435]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@17754059</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 23:49:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_JOOMLA_ARTICLE_003.Verify_publish_article()[pri:0, instance:TestCases.Article.TC_JOOMLA_ARTICLE_003@c1fdc4]">Verify_publish_article</td> 
+  <td>main@22223153</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 23:49:41</td>   <td>-14501</td> <td>&nbsp;</td><td title="&gt;&gt;TC_JOOMLA_ARTICLE_003.setUp()[pri:0, instance:TestCases.Article.TC_JOOMLA_ARTICLE_003@c1fdc4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/28 23:50:22</td>   <td>26193</td> <td>&nbsp;</td><td title="&lt;&lt;TC_JOOMLA_ARTICLE_003.tearDown()[pri:0, instance:TestCases.Article.TC_JOOMLA_ARTICLE_003@c1fdc4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
 </table>
