--- a/Execution Reports/old/Default suite/methods.html
+++ b/Execution Reports/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99ad8e">  <td>15/06/29 00:36:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC_JOOMLA_BANNERS_CLIENTS_003.setUp()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
-<tr bgcolor="99ad8e">  <td>15/06/29 00:36:58</td>   <td>9248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_JOOMLA_BANNERS_CLIENTS_003.verify_create_client()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">verify_create_client</td> 
-  <td>main@22223153</td>   <td></td> </tr>
-<tr bgcolor="99ad8e">  <td>15/06/29 00:37:09</td>   <td>19856</td> <td>&nbsp;</td><td title="&lt;&lt;TC_JOOMLA_BANNERS_CLIENTS_003.tearDown()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@c1fdc4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22223153</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/29 21:10:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC_JOOMLA_BANNERS_CLIENTS_003.setUp()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@2ac1fdc4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/29 21:10:33</td>   <td>8199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_JOOMLA_BANNERS_CLIENTS_003.verify_create_client()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@2ac1fdc4]">verify_create_client</td> 
+  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="99ad8e">  <td>15/06/29 21:10:47</td>   <td>21490</td> <td>&nbsp;</td><td title="&lt;&lt;TC_JOOMLA_BANNERS_CLIENTS_003.tearDown()[pri:0, instance:TestCases.BannerClients.TC_JOOMLA_BANNERS_CLIENTS_003@2ac1fdc4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@290658609</td>   <td></td> </tr>
 </table>
